--- a/JS기초/ex18객체.html
+++ b/JS기초/ex18객체.html
@@ -54,9 +54,26 @@
         }
 
         // 객체 생성(pokemon)
-        // 3akfl -> name , type, age
-
+        // 3마리 -> name , type, age
+        let pica = {
+            name : '피카츄',
+            type : '번개',
+            age : '2'
+        }
+        let pica2 = {
+            name : '꼬부기',
+            type : '물',
+            age : '3'
+        }
+        let pica3 = {
+            name : '파이리',
+            type : '불',
+            age : '1'
+        }
         // 출력 제가 가장 좋아하는 포켓몬은 name이고 type 속성이며 age살입니다.
+        console.log('제가 가장 좋아하는 포켓몬은 ', pica.name,"이고 ",pica.type,'이며 ',pica.age,'살입니다.');
+        console.log('제가 가장 좋아하는 포켓몬은 ', pica2.name,"이고 ",pica2.type,'이며 ',pica2.age,'살입니다.');
+        console.log('제가 가장 좋아하는 포켓몬은 ', pica3.name,"이고 ",pica3.type,'이며 ',pica3.age,'살입니다.');
     </script>    
 </body>
 </html>
