--- a/JS실전/ex04DOM속성.html
+++ b/JS실전/ex04DOM속성.html
@@ -13,7 +13,22 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdapV99zB_CfpAYs9B3zs-Ilw8exERpCevjw&usqp=CAU" id="imgTag" width="200px">
     <button id="getImgBtn">이미지 값 불러오기</button>
     <button id="setImgBtn">이미지 변경하기</button>
+    <h1>DOM</h1>
+    <p>Document : html 문서</p>
+    <p>Object : 객체(js)</p>
+    <p>Model : modeling</p>
 
+    최상위 객체 : document
+    ii가 hello인 요소를 가져오는 경우
+    => document.getElementById('hello')
+
+    class 가 a인 요소들을 가져오는 경우
+    => document.getElementsByclassName('a')[0]
+
+    그 안에 문자만 => 요소.innerText
+    그 안의 문자 / html  => 요소.innerHTML
+    input태그안에 => .value
+    
     <script>
         // https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSZkG_cy2ejpC4fLDN7BHGC1U-bcXGTiW5DA&usqp=CAU
 
