--- a/JS심화/ex05jQueryAdd.html
+++ b/JS심화/ex05jQueryAdd.html
@@ -10,6 +10,9 @@
         img{
             width : 200px;
         }
+        .newClass{
+            border : 5px solid rgb(207, 17, 169);
+        }
     </style>
 </head>
 <body>
@@ -21,5 +24,30 @@
     <button id="btn3">class 삭제</button>
     <button id="btn4">부모요소 접근</button>
     <button id="btn5">this문법</button>
+    <script>
+        //  요소 지우기
+        $('#btn1').click(()=>{
+            $('#img1').remove()
+        })
+        // class add  : .addCLass
+        $('#btn2').click(()=>{
+            $('#img1').addClass('newClass')
+        })
+        // delete class : .removeCLass()
+        $('#btn3').click(()=>{
+            $('#img1').removeClass('newClass')
+        })
+        // access parent attribute : .parent()
+        $('#btn4').click(()=>{
+            $('#img1').parent().css('background-color','violet')
+        })
+        //  this Grammer
+        // ** Arrow FUnction 과 함꼐 사용 불가
+        $('#btn5').click(function(){
+            $(this).text('버튼 내용 바꾸기');
+        })
+
+
+    </script>
 </body>
 </html>
